--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,8 @@
-# build output
-dist
-
-# dependencies
-node_modules
-package-lock.json
-yarn.lock
-!/yarn.lock
-test/node_modules
-.pnpm-store/
-
-# test output
-test/
-.DS_Store
-
-# Cache
+/node_modules
+/dist
+.env
 *.tsbuildinfo
-.turbo
+pnpm-lock.yaml
+yarn.lock
+package-lock.json
+**/*test.*
